# view-mesh

./: pyproject.toml
src/: view_mesh_app.py
src/view_mesh/: __init__.py  ps_viewer.py  studio_app.py  viewmesh.py  viewmesh_copy.py
